# agrotrilho-app

./: .clang-format  .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build.yml  ci.yml
android/app/: build.gradle
docs/: ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  SETUP.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: animal.dart  lote.dart  platform_config.dart  sanitary_event.dart
lib/screens/: cadastro_animal.dart  detalhe_animal.dart  lista_animais.dart  root_screen.dart  scanner_qrcode.dart
lib/services/: animal_service.dart  nfc_platform_service.dart  qr_platform_service.dart  qrcode_service.dart  sanitary_service.dart  voice_service.dart
lib/theme/: app_theme.dart
lib/utils/: constants.dart  platform_config.dart  platform_detection.dart  platform_helper.dart  responsive_helper.dart  ui_scale.dart  validators.dart
lib/widgets/: animal_card.dart  app_bottom_nav.dart  app_drawer.dart  dashboard_card.dart  large_action_card.dart  lote_card.dart  metric_card.dart  platform_indicator.dart  qr_display_widget.dart  qrcode_widget.dart  responsive_grid.dart  responsive_layout.dart  sanitary_event_card.dart  stat_widget.dart  stats_card.dart  (+2 more)
linux/: .gitignore  CMakeLists.txt  my_application.cc
native/: CMakeLists.txt
native/include/agrotrilho/: animal_data.h  gps_utils.h  tracking_data.h
native/src/: gps_utils.cpp  tracking_data.cpp
test/: widget_test.dart
tools/: build.sh  clean.sh  format.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+27 files in other folders)
